Update HTML page

--- a/static/reset-password.html
+++ b/static/reset-password.html
@@ -18,6 +18,61 @@
 
 		document.addEventListener('DOMContentLoaded', () =>
 		{
+			document.querySelector('form#password-reset')
+			.addEventListener('submit', function (event)
+			{
+				event.preventDefault()
+
+				var request = new XMLHttpRequest()
+				var data =
+				{
+					code: this.code.value,
+					new_pass: this.password.value
+				}
+
+				request.open(this.method, this.action, true)
+				request.setRequestHeader("Content-type", "application/json")
+
+				request.onload = () =>
+				{
+					var data = {}
+
+
+					if (request.status >= 200 && request.status < 400)
+					{
+						// Success!
+						this.insertAdjacentHTML(
+							'beforebegin',
+							`<div class="alert alert-success" role="alert">
+								<strong>New Password is set</strong>
+							</div>`
+						)
+					} else if (request.status === 400)
+					{
+						// We reached our target server, but it returned an error
+						data = JSON.parse(request.responseText)
+						this.insertAdjacentHTML(
+							'beforebegin',
+							`<div class="alert alert-danger" role="alert">
+								<strong>${data.message}</strong>
+							</div>`
+						)
+					}
+					else
+					{
+						// display 'I have a bad feelings about this'
+						this.insertAdjacentHTML(
+							'beforebegin',
+							`<div class="alert alert-danger" role="alert">
+								<strong>${data.message}</strong>
+							</div>`
+						)
+					}
+				}
+
+				request.send(JSON.stringify(data))
+			})
+
 			if (code)
 			{
 				document.querySelector('form input#code').value = code
@@ -96,11 +151,11 @@
 			<form id="password-reset" action="/api/password/reset" method="POST">
 				<div class="form-group">
 					<label for="code">Code</label>
-					<input type="text" class="form-control" id="code" name="code" placeholder="Code">
+					<input type="text" class="form-control" id="code" name="code" placeholder="Code" required>
 				</div>
 				<div class="form-group">
 					<label for="password">Password</label>
-					<input type="password" class="form-control" id="password" name="password" placeholder="Password">
+					<input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
 				</div>
 
 				<button type="submit" class="btn btn-default">Submit</button>
