Fix issue with iOS safari

--- a/static/reset-password.html
+++ b/static/reset-password.html
@@ -9,19 +9,20 @@
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-	<script>
+	<script type="text/javascript">
 		var is = {}
 		var code = get_code()
 
 		is.iOS     = navigator.userAgent.match(/iPhone|iPad/i)
 		is.Android = navigator.userAgent.match(/android/i)
 
-		document.addEventListener('DOMContentLoaded', () =>
+		document.addEventListener('DOMContentLoaded', function ()
 		{
 			document.querySelector('form#password-reset')
 			.addEventListener('submit', function (event)
 			{
 				event.preventDefault()
+				var self = this
 
 				var request = new XMLHttpRequest()
 				var data =
@@ -33,39 +34,38 @@
 				request.open(this.method, this.action, true)
 				request.setRequestHeader("Content-type", "application/json")
 
-				request.onload = () =>
+				request.onload = function ()
 				{
 					var data = {}
-
 
 					if (request.status >= 200 && request.status < 400)
 					{
 						// Success!
-						this.insertAdjacentHTML(
+						self.insertAdjacentHTML(
 							'beforebegin',
-							`<div class="alert alert-success" role="alert">
-								<strong>New Password is set</strong>
-							</div>`
+							'<div class="alert alert-success" role="alert">' +
+								'<strong>New Password is set</strong>' +
+							'</div>'
 						)
 					} else if (request.status === 400)
 					{
 						// We reached our target server, but it returned an error
 						data = JSON.parse(request.responseText)
-						this.insertAdjacentHTML(
+						self.insertAdjacentHTML(
 							'beforebegin',
-							`<div class="alert alert-danger" role="alert">
-								<strong>${data.message}</strong>
-							</div>`
+							'<div class="alert alert-danger" role="alert">' +
+								'<strong>' + data.message + '</strong>' +
+							'</div>'
 						)
 					}
 					else
 					{
 						// display 'I have a bad feelings about this'
-						this.insertAdjacentHTML(
+						self.insertAdjacentHTML(
 							'beforebegin',
-							`<div class="alert alert-danger" role="alert">
-								<strong>${data.message}</strong>
-							</div>`
+							'<div class="alert alert-danger" role="alert">' +
+								'<strong>I have a bad feeling about this. © Han Solo</strong>' +
+							'</div>'
 						)
 					}
 				}
@@ -80,45 +80,17 @@
 
 			if (is.iOS)
 			{
-				location = `netvest://reset-password?code=${code}`
-
-				// fallback('http://www.apple.com/ru/itunes/')
+				location = 'netvest://reset-password?code=' + code
 			}
 			else if (is.Android)
 			{
-				location = `intent://recovery/#Intent;package=com.netvest.netvestapp;scheme=netvest;S.code=${code};S.email=[email];end;`
-
-				// fallback('https://play.google.com/store')
+				location = 'intent://recovery/#Intent;' +
+					'package=com.netvest.netvestapp;' +
+					'scheme=netvest;' +
+					'S.code=' + code + ';' +
+					'S.email=[email];end;'
 			}
 		})
-
-		function fallback (store)
-		{
-			setTimeout(function still ()
-			{
-				if (! isHidden())
-				{
-					location = store
-				}
-			}
-			, 2000)
-		}
-
-		function isHidden ()
-		{
-			if (typeof document.hidden !== 'undefined')
-			{
-				return Boolean(document.hidden)
-			}
-			else if (typeof document.webkitHidden !== 'undefined')
-			{
-				return Boolean(document.webkitHidden)
-			}
-			else
-			{
-				return false
-			}
-		}
 
 		function get_code ()
 		{
@@ -126,7 +98,7 @@
 			var query = {}
 
 			search = search.slice(1).split('&')
-			search.map((arg) =>
+			search.map(function (arg)
 			{
 				var key_value = arg.split('=')
 				query[key_value[0]] = key_value[1]
