(NET-735) Update behavior of password reset page

--- a/static/reset-password.html
+++ b/static/reset-password.html
@@ -81,6 +81,8 @@
 			if (is.iOS)
 			{
 				location = 'netvest://reset-password?code=' + code
+
+				setTimeout(fallback, 2000)
 			}
 			else if (is.Android)
 			{
@@ -89,8 +91,40 @@
 					'scheme=netvest;' +
 					'S.code=' + code + ';' +
 					'S.email=[email];end;'
+
+				setTimeout(fallback, 2000)
+			}
+			else
+			{
+				fallback()
 			}
 		})
+
+		function isHidden ()
+		{
+			if (typeof document.hidden !== 'undefined')
+			{
+				return Boolean(document.hidden)
+			}
+			else if (typeof document.webkitHidden !== 'undefined')
+			{
+				return Boolean(document.webkitHidden)
+			}
+			else
+			{
+				return false
+			}
+		}
+
+		function fallback ()
+		{
+			if (! isHidden())
+			{
+				document.querySelector('body > div')
+				.classList
+				.toggle('hidden', false)
+			}
+		}
 
 		function get_code ()
 		{
@@ -112,9 +146,15 @@
 			return ''
 		}
 	</script>
+
+	<style>
+		.hidden {
+			display: none;
+		}
+	</style>
 </head>
 <body>
-<div class="container-fluid">
+<div class="container-fluid hidden">
 	<div class="row">
 		<div class="col-xs-12 col-md-8 col-md-offset-2">
 			<h1 class="text-center">NetVest</h1>
