hide page (go blank page) when navigator is not leaving.

--- a/static/reset-password.html
+++ b/static/reset-password.html
@@ -96,7 +96,7 @@
 			}
 			else
 			{
-				fallback()
+				// fallback()
 			}
 		})
 
@@ -118,12 +118,7 @@
 
 		function fallback ()
 		{
-			if (! isHidden())
-			{
-				document.querySelector('body > div')
-				.classList
-				.toggle('hidden', false)
-			}
+			location = 'about:blank'
 		}
 
 		function get_code ()
@@ -146,15 +141,9 @@
 			return ''
 		}
 	</script>
-
-	<style>
-		.hidden {
-			display: none;
-		}
-	</style>
 </head>
 <body>
-<div class="container-fluid hidden">
+<div class="container-fluid">
 	<div class="row">
 		<div class="col-xs-12 col-md-8 col-md-offset-2">
 			<h1 class="text-center">NetVest</h1>
