reset-password page: fallback to Store page if any.

--- a/static/reset-password.html
+++ b/static/reset-password.html
@@ -16,6 +16,10 @@
 		is.iOS     = navigator.userAgent.match(/iPhone|iPad/i)
 		is.Android = navigator.userAgent.match(/android/i)
 
+		var to = {}
+		to.iOS     = 'https://itunes.apple.com'
+		to.Android = 'https://play.google.com'
+
 		document.addEventListener('DOMContentLoaded', function ()
 		{
 			document.querySelector('form#password-reset')
@@ -82,7 +86,7 @@
 			{
 				location = 'netvest://reset-password?code=' + code
 
-				setTimeout(fallback, 2000)
+				setTimeout(fallbackTo(to.iOS), 2000)
 			}
 			else if (is.Android)
 			{
@@ -92,7 +96,7 @@
 					'S.code=' + code + ';' +
 					'S.email=[email];end;'
 
-				setTimeout(fallback, 2000)
+				setTimeout(fallbackTo(to.Android), 2000)
 			}
 			else
 			{
@@ -116,9 +120,19 @@
 			}
 		}
 
-		function fallback ()
+		function fallbackTo (to)
 		{
-			location = 'about:blank'
+			return function ()
+			{
+				return fallback(to)
+			}
+		}
+
+		function fallback (to)
+		{
+			to || (to = 'about:blank')
+
+			location = to
 		}
 
 		function get_code ()
