Update success message

--- a/static/confirm-email.html
+++ b/static/confirm-email.html
@@ -43,7 +43,7 @@
 						self.insertAdjacentHTML(
 							'beforebegin',
 							'<div class="alert alert-success" role="alert">' +
-							'<strong>New Password is set</strong>' +
+							'<strong>Email Confirmed Successfully</strong>' +
 							'</div>'
 						)
 					} else if (request.status === 400)
