Netvest -> Netvest on Password reset page, Email Confirm page

--- a/static/reset-password.html
+++ b/static/reset-password.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>NetVest - Reset Password</title>
+	<title>Netvest - Reset Password</title>
 
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -160,7 +160,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-xs-12 col-md-8 col-md-offset-2">
-			<h1 class="text-center">NetVest</h1>
+			<h1 class="text-center">Netvest</h1>
 			<h2 class="text-center">Password Reset</h2>
 
 			<form id="password-reset" action="/api/password/reset" method="POST">
