--- a/static/detect-device.html
+++ b/static/detect-device.html
@@ -6,7 +6,7 @@ is.Android = navigator.userAgent.match(/android/i)
 
 if (is.iOS)
 {
-	location = 'netvest://do-something'
+	location = 'envest://do-something'
 
 	fallback('http://www.apple.com/ru/itunes/')
 }
